--- a/addEmployee.html
+++ b/addEmployee.html
@@ -22,7 +22,7 @@
     <div id="result"></div>
   </div>
   <div class="footer">
-    <footer>All Rights Reserved by Coder</footer>
+    <footer><h4>All Rights Reserved by Coder<h4></footer>
   </div>
   <script src="script2.js"></script>
 </body>
