--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </tbody>
     </table>
     <div class="footer">
-        <footer>All Rights Reserved by Coder</footer>
+        <footer><h4>All Rights Reserved by Coder</h4></footer>
     </div>
   </div>
   <script src="script.js"></script>
