--- a/updateEmployee.html
+++ b/updateEmployee.html
@@ -22,8 +22,9 @@
     <div id="result"></div>
   </div>
   <div class="footer">
-    <footer>All Rights Reserved by Coder</footer>
+    <footer><h4>All Rights Reserved by Coder</h4></footer>
   </div>
   <script src="script3.js"></script>
+  <script src="autopopulate.js"></script>
 </body>
 </html>
